src/test/ui/llvm-asm/inline-asm-bad-constraint.stderr
error[E0668]: malformed inline assembly
  --> $DIR/inline-asm-bad-constraint.rs:23:9
   |
LL |         llvm_asm!("" :"={rax"(rax))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `llvm_asm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0668]: malformed inline assembly
  --> $DIR/inline-asm-bad-constraint.rs:31:9
   |
LL |         llvm_asm!("callq $0" : : "0"(foo))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `llvm_asm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0668]: malformed inline assembly
  --> $DIR/inline-asm-bad-constraint.rs:38:9
   |
LL |         llvm_asm!("addb $1, $0" : "={rax}"((0i32, rax)));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `llvm_asm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0668`.
